--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Love -- Drama'
+- GITenberg
 title: 'Kabale und Liebe: Ein bürgerliches Trauerspiel'
 url: http://www.gutenberg.org/ebooks/6498
